# PRG-Praktikum

./: .gitignore  README.org
Milestones/Milestone1/: README.org  readme.txt
Milestones/Milestone1/code/: CMakeLists.txt  Makefile
Milestones/Milestone1/code/Aufgabe1ab/: Makefile  aufgabe1.cpp
Milestones/Milestone1/code/include/: cellular_automaton.h  cellular_automaton.hpp  matrix.h  matrix.hpp  vis_crypt.h  vis_crypt_dirty.h
Milestones/Milestone1/code/src/: aufgabe1.cpp  cellular_automaton.cpp  game_of_life.cpp  matrix.cpp  vis_crypt.cpp  vis_crypt_dirty.cpp
Milestones/Milestone1/code/src/Aufgabe1ab/: aufgabe1.cpp  aufgabe1ab
Milestones/Milestone1/code/test/: test.cpp
Milestones/Milestone1/gui/: gameoflifewidget.cpp  gameoflifewidget.h  gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  visualcryptpicturewidget.cpp  visualcryptpicturewidget.h
Milestones/Milestone1/materials/: 2f_approval.txt  2f_bugaspicture.txt  beispieldatei_cellularautomaton.txt  beispielencryted.txt  beispielkey.txt  encrypted.txt  inappropriate_file-notrectengular-07encoded.txt  jansenc1.txt  jansenc2.txt  jansrandomkey.txt  tinas_random_key.txt
Milestones/Milestone2/: README.txt
Milestones/Milestone2/code/: MakeFile  Makefile
Milestones/Milestone2/code/include/: controller.h  layer.hpp  multi_layer_perceptron.hpp  network.hpp  neuron.hpp
Milestones/Milestone2/code/src/: controller.cpp  fcnn.cpp  layer.cpp  multi_layer_perceptron.cpp  network.cpp  neuron.cpp
Milestones/Milestone2/graphs/: graphs.pro  mainwindow.ui
Milestones/Milestone2/neuralgui/: datastorage.cpp  datastorage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  neuralgui.pro
Milestones/Milestone2/neuralgui/qcustomplot/: qcustomplot.pri
Milestones/Milestone3/: .gitignore
Milestones/Milestone3/code/: CMakeLists.txt
Milestones/Milestone3/code/include/: catch.hpp  channel.hpp  conv3d.hpp  kernel.hpp  layer.hpp  maxpool3d.hpp
Milestones/Milestone3/code/src/: channel.cpp  cnn.cpp  controller.cpp  conv3d.cpp  fcnn.cpp  kernel.cpp  layer.cpp  maxpool3d.cpp  neuron.cpp
Milestones/Milestone3/conv3d/: conv3d.py
Milestones/Milestone3/neuralgui/: datastorage.cpp  datastorage.h  mainwindow.cpp  mainwindow.ui  neuralgui.pro
